# fcitx-gtk

./: CMakeLists.txt  README
gtk2/: CMakeLists.txt  fcitxim.c  fcitximcontext-gio.c
gtk3/: CMakeLists.txt
